--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "YellowCardTest",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AFa0304/YellowCard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AFa0304/YellowCard/issues"
+  },
+  "homepage": "https://github.com/AFa0304/YellowCard#readme",
+  "description": ""
 }
